--- a/blog/templates/home_page.html
+++ b/blog/templates/home_page.html
@@ -6,7 +6,7 @@
 <body>
   <h1>Bloggity!</h1>
   {% for post in posts %}
-    <h2 class="post__title">{{ post.title }}</h2>
+    <h2 class="post__title"><a href="{{ post.url }}">{{ post.title }}</a></h2>
     <p class="post__content">{{ post.content }}</p>
   {% endfor %}
 </body>
