feat: Add post pages

--- a/blog/templates/home_page.html
+++ b/blog/templates/home_page.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Bloggity!</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block body %}
   <h1>Bloggity!</h1>
   {% for post in posts %}
-    <h2 class="post__title"><a href="{{ post.url }}">{{ post.title }}</a></h2>
+    <h2 class="post__title"><a href="/post/{{ post.key.id() }}">{{ post.title }}</a></h2>
     <p class="post__content">{{ post.content }}</p>
   {% endfor %}
-</body>
-</html>
+{% endblock %}
