feat: Working login with redirect

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -4,6 +4,11 @@
   <title>Bloggity!</title>
 </head>
 <body>
+  <nav>
+    {% if user %}
+      Welcome {{ user.username }}
+    {% endif %}
+  </nav>
   {% block body %}
   {% endblock %}
 </body>
