feat: Working comments

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <title>Bloggity!</title>
+  <link rel="stylesheet" href="/static/style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="/static/blog.js"></script>
 </head>
 <body>
   <nav>
