--- a/blog/templates/post.html
+++ b/blog/templates/post.html
@@ -15,7 +15,7 @@
       {% if user and user.key.id() == comment.user_id %}
         <a class="comment__edit" href="/post/{{ post.key.id() }}/comment/{{ comment.key.id() }}">Edit</a>
         <form method="post" action="/post/{{ post.key.id() }}/comment/{{ comment.key.id() }}">
-          <input class="delete" type="submit" name="delete">
+          <button class="delete" type="submit" name="delete" value="delete">
         </form>
       {% endif %}
       <h3 class="comment__user">{{ comment.username }}</h3>
