feat: Add post liking

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <nav>
+    <a class="home-link" href="/">Bloggity!</a>
     {% if user %}
       Welcome {{ user.username }}
     {% endif %}
