--- a/blog/templates/home_page.html
+++ b/blog/templates/home_page.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block body %}
   <h1>Bloggity!</h1>
+  <a class="create-link" href="/post/create">Create a blog post</a>
   {% for post in posts %}
     <div class="post">
       <h2 class="post__title"><a href="/post/{{ post.key.id() }}">{{ post.title }}</a></h2>
