--- a/blog/templates/home_page.html
+++ b/blog/templates/home_page.html
@@ -9,4 +9,9 @@
       <p class="post__content">{{ post.content }}</p>
     </div>
   {% endfor %}
+  {% if show_next_page %}
+    <form>
+      <button class="next-page__button" name="page" value="{{ page + 1 }}">Next</button>
+    </form>
+  {% endif %}
 {% endblock %}
