--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -2,21 +2,27 @@
 <html>
 <head>
   <title>Bloggity!</title>
+  <link href="https://fonts.googleapis.com/css?family=David+Libre" rel="stylesheet">
   <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
   <nav>
-    <a class="home-link" href="/">Bloggity!</a>
-    {% if user %}
-      Welcome {{ user.username }}
-      <form method="post" action="/logout">
-        <button class="logout-button">Logout</button>
-      </form>
-    {% else %}
-      <a class="login-button" href="/login">Login</a>
-    {% endif %}
+    <h1 class="main-header"><a class="home-link" href="/">Bloggity!</a></h1>
+    <div class="auth">
+      {% if user %}
+        <span>Welcome {{ user.username }}</span>
+        <form method="post" action="/logout">
+          <button class="logout-button">Logout</button>
+        </form>
+      {% else %}
+        <a class="login-button" href="/login">Login</a>
+      {% endif %}
+    </div>
   </nav>
-  {% block body %}
-  {% endblock %}
+  <hr>
+  <div class="container">
+    {% block body %}
+    {% endblock %}
+  </div>
 </body>
 </html>
