--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Bloggity!</title>
   <link href="https://fonts.googleapis.com/css?family=David+Libre" rel="stylesheet">
