--- a/blog/static/style.css
+++ b/blog/static/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'David Libre', serif;
+  color: #111;
 }
 a {
   text-decoration: none;
@@ -20,7 +21,8 @@ button {
   font-family: inherit;
   font-size: 1em;
   background-color: white;
-  text-decoration: underline;
+  text-decoration: none;
+  color: #111;
 }
 
 .main-header {
@@ -33,13 +35,45 @@ button {
   text-align: center;
 }
 
+.post__header {
+  display: flex;
+  align-items: baseline;
+}
+
 .post__title {
   font-size: 2.5em;
+  margin: 0.5em 0 0 0;
+}
+
+.post__date {
+  padding: 0 1em;
+  margin: 0;
+  color: #999;
+}
+
+.post__links {
+  display: flex;
+  color: #333;
+}
+
+.post__delete {
+  text-decoration: none;
+  padding: 0 1em;
+}
+
+.post__like {
+  color: #333;
+  padding: 0.1em 0;
+}
+
+.post__user {
+  margin: 0.8em 0 0 0;
 }
 
 .box-form {
   margin: 0 auto;
-  width: 400px;
+  max-width: 60vw;
+  width: 75%;
 }
 
 label {
@@ -52,9 +86,17 @@ label {
   margin: 0.2em;
 }
 
+input, textarea {
+  font-size: inherit;
+  padding: 0.5em;
+  border-radius: 3px;
+  border: 1px solid #333;
+  box-sizing: border-box;
+}
+
 input[type="text"], input[type="password"], input[type="email"] {
   width: 100%;
-  height: 3em;
+  height: 2em;
   border-radius: 3px;
   border: 1px solid #333;
 }
@@ -69,4 +111,50 @@ input[type="text"], input[type="password"], input[type="email"] {
   width: 100%;
   text-align: center;
   font-size: 3em;
+}
+
+.post-form__post-content {
+  width: 100%;
+  height: 50vh;
+}
+
+.comment__header {
+  display: flex;
+}
+
+.comment__user {
+  font-size: 1.2em;
+}
+
+.comment__date {
+  font-size: 0.8em;
+  padding: 0.3em 1em;
+  color: #999;
+}
+
+.comment__edit {
+  color: #333;
+  font-size: 0.8em;
+}
+
+.comment__delete {
+  font-size: 0.8em;
+  text-decoration: none;
+  color: #333;
+  padding: 0 0.5em;
+  vertical-align: top
+}
+
+.comment__links {
+  display: flex;
+}
+
+.comment__comment {
+  font-size: 0.8em;
+  margin: 0.3em 0 1.5em 0;
+}
+
+.comment-box {
+  width: 80%;
+  max-width: 500px;
 }
