--- a/blog/templates/post.html
+++ b/blog/templates/post.html
@@ -1,34 +1,43 @@
 {% extends "base.html" %}
 {% block body %}
+  <div class="post__header">
+    <h1 class="post__title">{{ post.title }}</h1>
+    <h3 class="post__date">{{ post.date_str }}</h3>
+  </div>
   {% if user and user.key.id() == post.user_id %}
-    <a class="post__edit" href="/post/{{ post.key.id() }}/edit">Edit</a>
-    <form method="post">
-      <button class="post__delete" name="delete" value="delete">Delete</button>
-    </form>
+    <div class="post__links">
+      <a class="post__edit" href="/post/{{ post.key.id() }}/edit">Edit</a>
+      <form method="post">
+        <button class="post__delete" name="delete" value="delete">Delete</button>
+      </form>
+    </div>
   {% endif %}
+  <h2 class="post__user">by {{ post.username }}</h2>
   {% if display_likes %}
     <div class="post__likes">{{ likes }} Likes</div>
   {% else %}
     <form method="post">
-      <button class="post__like" name="like" value="like">Like</button>
+      <button class="post__like" name="like" value="like">Like this post</button>
     </form>
   {% endif %}
-  <h1 class="post__title">{{ post.title }}</h1>
-  <h3 class="post__date">{{ post.date_str }}</h3>
   {% for para in post.paragraphs %}
     <p class="post__content">{{ para }}</p>
   {% endfor %}
   <h2>Comments</h2>
   {% for comment in comments %}
     <div class="comment">
-      {% if user and user.key.id() == comment.user_id %}
-        <a class="comment__edit" href="/post/{{ post.key.id() }}/comment/{{ comment.key.id() }}">Edit</a>
-        <form method="post" action="/post/{{ post.key.id() }}/comment/{{ comment.key.id() }}">
-          <button class="delete" type="submit" name="delete" value="delete">Delete</button>
-        </form>
-      {% endif %}
-      <h3 class="comment__user">{{ comment.username }}</h3>
-      <h4 class="comment__date">{{ comment.formatted_date }}</h4>
+      <div class="comment__header">
+        <span class="comment__user">{{ comment.username }}</span>
+        <span class="comment__date">{{ comment.formatted_date }}</span>
+      </div>
+      <div class="comment__links">
+        {% if user and user.key.id() == comment.user_id %}
+          <a class="comment__edit" href="/post/{{ post.key.id() }}/comment/{{ comment.key.id() }}">Edit</a>
+          <form method="post" action="/post/{{ post.key.id() }}/comment/{{ comment.key.id() }}">
+            <button class="comment__delete" type="submit" name="delete" value="delete">Delete</button>
+          </form>
+        {% endif %}
+      </div>
       <p class="comment__comment">
         {% for para in comment.paragraphs %}
           {{para}}</br>
@@ -37,9 +46,10 @@
     </div>
   {% endfor %}
   {% if user %}
+    <h3>Write a comment:</h3>
     <form class="comment-form" method="post" action="/post/{{ post.key.id() }}/comment">
-      <textarea name="comment"></textarea>
-      <input class="comment-form__submit" type="submit">
+      <p><textarea class="comment-box" name="comment"></textarea></p>
+      <p><button class="comment-form__submit">Submit</button></p>
     </form>
     <div class="error">{{ error }}</div>
   {% else %}
