--- a/blog/templates/comment.html
+++ b/blog/templates/comment.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 {% block body %}
-  <h1 class="post__title">Write comment</h1>
   {% if comment %}
-    <form class="comment-form" method="post" action="/post/{{ post_id }}/comment/{{ comment.key.id() }}">
+    <form class="box-form" method="post" action="/post/{{ post_id }}/comment/{{ comment.key.id() }}">
   {% else %}
-    <form class="comment-form" method="post" action="/post/{{ post_id }}/comment">
-  {% endif %}}
-    <textarea class="comment-form__textarea" name="comment">{{ comment.comment }}</textarea>
-    <input class="comment-form__submit" type="submit">
+    <form class="box-form" method="post" action="/post/{{ post_id }}/comment">
+  {% endif %}
+    <p><label for="comment">Write a comment</label></p>
+    <p><textarea class="comment-form__textarea" name="comment">{{ comment.comment }}</textarea></p>
+    <p><button class="comment-form__submit" type="submit">Submit</button></p>
   </form>
   <div class="error">{{ error }}</div>
 {% endblock %}
