--- a/blog/static/style.css
+++ b/blog/static/style.css
@@ -157,3 +157,8 @@ input[type="text"], input[type="password"], input[type="email"] {
 .comment-form__textarea {
   width: 100%;
 }
+
+.comment-box {
+  min-width: 300px;
+  width: 40%;
+}
