--- a/blog/static/style.css
+++ b/blog/static/style.css
@@ -162,3 +162,13 @@ input[type="text"], input[type="password"], input[type="email"] {
   min-width: 300px;
   width: 40%;
 }
+
+.form-buttons {
+  font-size: 2em;
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-cancel {
+  color: #111;
+}
