--- a/blog/templates/blog_post_create_edit.html
+++ b/blog/templates/blog_post_create_edit.html
@@ -9,7 +9,10 @@
     <p><input type="text" class="post-form__post-title" value="{{ title }}" name="title" /></p>
     <p><label for="content">Content</label></p>
     <p><textarea class="post-form__post-content" name="content">{{ content }}</textarea></p>
-    <p><button class="post-form__submit" type="submit">Submit</button></p>
+    <div class="form-buttons">
+      <button class="post-form__submit" type="submit">Submit</button>
+      <a class="form-cancel" href='{{ referer }}'>Cancel</a>
+    </div>
   </form>
   {% for error in errors %}
     <p class="error">{{ error }}</p>
